--- a/PruebaGit/AndroidManifest.xml
+++ b/PruebaGit/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.tester.pruebagit.PruebaActivity"
+            android:label="@string/title_activity_prueba" >
+        </activity>
     </application>
 
 </manifest>
